crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__call__object.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/call/object.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: not callable: `<class Foo at [POINTER]>` is of type `Class`
   ╭─[craftinginterpreters/test/call/object.lox:3:11]
   │
 3 │ var foo = Foo();
   │           ─┬─  
   │            ╰─── this expression is of type `Class`
───╯
